# rust-redis-bench

./: Cargo.toml  README.md
assets/: jjh.md
src/: load_generator.rs  main.rs  mock_data.rs  redis_client.rs  server.rs
src/handlers/: benchmark.rs  mod.rs  products.rs  sessions.rs  users.rs
src/metrics/: collector.rs  mod.rs  percentiles.rs  stream.rs
src/middleware/: timing.rs
static/: app.js  index.html  style.css
